@@ -248,7 +248,7 @@ fileio_init(PyObject *oself, PyObject *args, PyObject *kwds)
 				return -1;
 
 			stringobj = PyUnicode_AsEncodedString(
-				u, Py_FileSystemDefaultEncoding, "surrogateescape");
+				u, Py_FileSystemDefaultEncoding, NULL);
 			Py_DECREF(u);
 			if (stringobj == NULL)
 				return -1;
